--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,10 @@
     text-wrap: balance;
   }
 }
+html {
+  scroll-behavior: smooth;
+}
+
 
 @layer base {
   :root {
@@ -87,4 +91,17 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 25s linear infinite;
 }
